Correct left padding on headers and footers in 'list' overlays
On search, talk and language overlays the header doesn't line up
with the list of results. This fixes it.

--- a/less/common/overlays.less
+++ b/less/common/overlays.less
@@ -135,7 +135,15 @@ html[dir="rtl"] {
 			color: #002BB8;
 		}
 	}
+
+	&.list-overlay {
+		.mw-mf-overlay-footer,
+		.mw-mf-overlay-header {
+			padding-left: @searchBarPaddingLeft;
+		}
+	}
 }
+
 
 .mw-mf-overlay > ul {
 	padding: 0;
